--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My App</title>
+    <h2>This is my new App</h2>
 </head>
 <body>
-    <h1>My App Website</h1>
+    <h1>My App </h1>
 </body>
 </html>
